[package]
name = "spawn-wait"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Spawn and manage a set of processes each associated with a key, and wait on all or part of them simultaneously."
repository = "https://github.com/micromaomao/rust-spawn-wait"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "blocking_wait_any" ]
blocking_wait_any = [ "signal-hook" ]

[dependencies]
signal-hook = { version = "0.3", default-features = false, features = ["iterator"], optional = true }
thiserror = "1.0"
libc = { version = "0.2.117", default-features = false }
